crates/reinhardt-core/macros/tests/ui/hook/fail/hook_missing_on.rs
use reinhardt_macros::hook;

#[hook(runserver)]
struct MyHook;

fn main() {}
