crates/reinhardt-core/macros/tests/ui/hook/fail/hook_missing_on.stderr
error: expected `on`
 --> tests/ui/hook/fail/hook_missing_on.rs:3:8
  |
3 | #[hook(runserver)]
  |        ^^^^^^^^^
